--- a/gui/locales/messages.pot
+++ b/gui/locales/messages.pot
@@ -1345,6 +1345,10 @@ msgctxt "select-location-view"
 msgid "(Added)"
 msgstr ""
 
+msgctxt "select-location-view"
+msgid "%(daita)s overrides %(multihop)s. To use %(multihop)s, please enable “%(directOnly)s” or disable %(daita)s in the %(daita)s settings."
+msgstr ""
+
 #. This is used for appending information about a location.
 #. E.g. "Gothenburg (Entry)" if Gothenburg has been selected as the entrypoint.
 #. Available placeholders:
@@ -1406,6 +1410,10 @@ msgid "Filtered:"
 msgstr ""
 
 msgctxt "select-location-view"
+msgid "Go to %(daita)s settings"
+msgstr ""
+
+msgctxt "select-location-view"
 msgid "List names must be unique."
 msgstr ""
 
@@ -1427,14 +1435,6 @@ msgstr ""
 
 msgctxt "select-location-view"
 msgid "The app selects a random bridge server, but servers have a higher probability the closer they are to you."
-msgstr ""
-
-msgctxt "select-location-view"
-msgid "While connected, your traffic will be routed through two secure locations, the entry point (a bridge server) and the exit point (a VPN server)."
-msgstr ""
-
-msgctxt "select-location-view"
-msgid "While connected, your traffic will be routed through two secure locations, the entry point and the exit point (needs to be two different VPN servers)."
 msgstr ""
 
 msgctxt "settings-import"
