--- a/android/lib/resource/src/main/res/values/strings.xml
+++ b/android/lib/resource/src/main/res/values/strings.xml
@@ -395,4 +395,5 @@
     <string name="app_info">App info</string>
     <string name="changelog_title">Changelog</string>
     <string name="version">Version</string>
+    <string name="local_network_sharing_info_block_connections_warning">Attention: If \"Block connections without VPN\" is enabled, \"Local network sharing\" will not work.</string>
 </resources>
